# baxter_pickup_msgs

./: .gitignore  CMakeLists.txt  package.xml
msg/: Block.msg  BlockArray.msg  Plan.msg  Step.msg
srv/: BaxterIK.srv
